# moisture-one

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  tasks.py  vercel.json
app/: entrypoint.go
d1/fleetMain/: fleetMain.ino
db/: db.go  models.go
fleetMain/: README.md  fleetMain.ino  secrets.example.h
interfaces/moisture-one-web/: .env.example  package-lock.json  package.json
interfaces/moisture-one-web/src/: App.js
moisture1-dashboard/: package-lock.json  package.json
moisture1-dashboard/src/: App.js  index.js
routes/: email.go  routes.go
scripts/: healthcheck.py
src/: .env.example  apps.py  main.py  settings.py
src/admin/: __init__.py  models.py  routes.py  schemas.py
src/db/: __init__.py
src/fleet/: __init__.py  models.py  schemas.py
src/middleware/: auth.py
src/migrations/: env.py
src/migrations/versions/: 0a3ff7409731_create_a_baseline_migrations.py  22e3cb66515d_.py  2785e49daf72_.py  44726a0f4796_.py  483f6fffc80e_.py  8243e6a092e5_.py  8b45460766cc_.py  a76c1264a660_.py  a7cbb891b2f0_.py  cbbdcf98c7e2_.py  da86c529c3ae_create_a_baseline_migrations.py  dbfa78698cdd_.py
src/utils/: auth.py  logging_utils.py  sentry.py
tests/: test_main.py  utils.py
