[tool.poetry]
name = "moisture-one"
version = "0.1.0"
description = ""
authors = ["Jagath Jai Kumar <jagath.jaikumar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
fastcrud = "^0.13.0"
pydantic-settings = "^2.3.2"
python-dotenv = "^1.0.1"
sentry-sdk = "^2.5.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"
uvicorn = "^0.30.1"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
